--- a/pom.xml
+++ b/pom.xml
@@ -6,15 +6,15 @@
 
     <groupId>net.samagames</groupId>
     <artifactId>Hydroangeas</artifactId>
-    <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
     <build>
-        <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
@@ -30,8 +30,6 @@
                     <archive>
                         <manifest>
                             <mainClass>net.samagames.hydroangeas.Hydroangeas</mainClass>
-                            <packageName>net.samagames.hydroangeas</packageName>
-                            <addClasspath>true</addClasspath>
                         </manifest>
                     </archive>
                     <descriptorRefs>
@@ -39,16 +37,6 @@
                     </descriptorRefs>
                     <finalName>Hydroangeas</finalName>
                     <appendAssemblyId>false</appendAssemblyId>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.2</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
                 </configuration>
             </plugin>
         </plugins>
