--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,16 @@
 
     <repositories>
         <repository>
+            <id>samagames-public</id>
+            <url>http://maven.samagames.net/public/</url>
+        </repository>
+        <repository>
             <id>samagames-developpers</id>
             <url>http://maven.samagames.net/developpers/</url>
+        </repository>
+        <repository>
+            <id>samagames-network</id>
+            <url>http://maven.samagames.net/network/</url>
         </repository>
     </repositories>
 
