--- a/pom.xml
+++ b/pom.xml
@@ -56,9 +56,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.spotify</groupId>
-            <artifactId>docker-client</artifactId>
-            <version>3.3.4</version>
+            <groupId>com.github.docker-java</groupId>
+            <artifactId>docker-java</artifactId>
+            <version>2.1.3</version>
         </dependency>
         <dependency>
             <groupId>net.sf.jopt-simple</groupId>
