--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>net.samagames</groupId>
     <artifactId>Hydroangeas</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -16,6 +16,10 @@
         <repository>
             <id>samagames-public</id>
             <url>http://maven.samagames.net/public/</url>
+        </repository>
+        <repository>
+            <id>public</id>
+            <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
         <repository>
             <id>samagames-developpers</id>
@@ -56,9 +60,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.github.docker-java</groupId>
-            <artifactId>docker-java</artifactId>
-            <version>2.1.3</version>
+            <groupId>com.spotify</groupId>
+            <artifactId>docker-client</artifactId>
+            <version>3.3.5</version>
         </dependency>
         <dependency>
             <groupId>net.sf.jopt-simple</groupId>
