--- a/pom.xml
+++ b/pom.xml
@@ -108,5 +108,10 @@
             <artifactId>httpclient</artifactId>
             <version>4.1.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.7-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
