--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ variables:
   HAS_TO_BE_PUT_IN_THE_DATA: "false"
   HAS_TO_BE_PUBLISHED_INTO_ARTIFACTORY: "false"
   ARTIFACTORY_REPOSITORY: ""
+  ARTIFACTORY_ARTIFACT_DOMAIN: ""
   ARTIFACTORY_ARTIFACT_GROUP: ""
   ARTIFACTORY_ARTIFACT_NAME: ""
   ARTIFACTORY_ARTIFACT_VERSION: ""
@@ -13,7 +14,7 @@ variables:
 build:
   stage: build
   script:
-    - 'if [ -f "build.gradle" ]; then gradle build --refresh-dependencies; else mvn install; fi'
+    - 'if [ -f "build.gradle" ]; then gradle build install --refresh-dependencies; else mvn install; fi'
   artifacts:
     paths:
       - build/libs/*.jar
@@ -24,10 +25,9 @@ deploy-developement:
   stage: deploy
   only:
     - develop
-    - "1.10"
   script:
     - 'if [ "$HAS_TO_BE_PUT_IN_THE_DATA" == "true" ]; then if [ -f "build.gradle" ]; then cp -f build/libs/*.jar /home/www/static/templates/dependencies/; else cp -f target/*.jar /home/www/static/templates/dependencies/; fi; fi'
-    - 'if [ "$HAS_TO_BE_PUBLISHED_INTO_ARTIFACTORY" == "true" ]; then if [ -f "build.gradle" ]; then artifactory-publish build/libs/${ARTIFACTORY_ARTIFACT_NAME}-${ARTIFACTORY_ARTIFACT_VERSION}.jar $ARTIFACTORY_REPOSITORY $ARTIFACTORY_ARTIFACT_GROUP $ARTIFACTORY_ARTIFACT_NAME $ARTIFACTORY_ARTIFACT_VERSION; else artifactory-publish target/${ARTIFACTORY_ARTIFACT_NAME}-${ARTIFACTORY_ARTIFACT_VERSION}.jar $ARTIFACTORY_REPOSITORY $ARTIFACTORY_ARTIFACT_GROUP $ARTIFACTORY_ARTIFACT_NAME $ARTIFACTORY_ARTIFACT_VERSION; fi ; fi'
+    - 'if [ "$HAS_TO_BE_PUBLISHED_INTO_ARTIFACTORY" == "true" ]; then if [ -f "build.gradle" ]; then artifactory-publish build/libs/${ARTIFACTORY_ARTIFACT_NAME}-${ARTIFACTORY_ARTIFACT_VERSION}.jar $ARTIFACTORY_REPOSITORY $ARTIFACTORY_ARTIFACT_DOMAIN/$ARTIFACTORY_ARTIFACT_GROUP $ARTIFACTORY_ARTIFACT_NAME $ARTIFACTORY_ARTIFACT_VERSION; else artifactory-publish target/${ARTIFACTORY_ARTIFACT_NAME}-${ARTIFACTORY_ARTIFACT_VERSION}.jar $ARTIFACTORY_REPOSITORY $ARTIFACTORY_ARTIFACT_DOMAIN/$ARTIFACTORY_ARTIFACT_GROUP $ARTIFACTORY_ARTIFACT_NAME $ARTIFACTORY_ARTIFACT_VERSION; fi ; fi'
 
 deploy-production:
   stage: deploy
